plugins/problemreporter/problemreporterplugin.cpp
@@ -41,6 +41,8 @@
 
 #include <shell/problem.h>
 
+#include <algorithm>
+
 K_PLUGIN_FACTORY_WITH_JSON(KDevProblemReporterFactory, "kdevproblemreporter.json",
                            registerPlugin<ProblemReporterPlugin>();)
 
@@ -74,6 +76,11 @@ public:
         , m_inlineNoteProvider(document)
     {}
 
+    KTextEditor::Document* document() const
+    {
+        return m_highlighter.document();
+    }
+
     void setProblems(const QVector<IProblem::Ptr>& problems)
     {
         m_highlighter.setProblems(problems);
@@ -99,6 +106,8 @@ ProblemReporterPlugin::ProblemReporterPlugin(QObject* parent, const QVariantList
             &ProblemReporterPlugin::documentClosed);
     connect(ICore::self()->documentController(), &IDocumentController::textDocumentCreated, this,
             &ProblemReporterPlugin::textDocumentCreated);
+    connect(ICore::self()->documentController(), &IDocumentController::documentUrlChanged, this,
+            &ProblemReporterPlugin::documentUrlChanged);
     connect(ICore::self()->documentController(), &IDocumentController::documentActivated, this,
             &ProblemReporterPlugin::documentActivated);
     connect(DUChain::self(), &DUChain::updateReady,
@@ -147,6 +156,33 @@ void ProblemReporterPlugin::textDocumentCreated(KDevelop::IDocument* document)
 
     DUChain::self()->updateContextForUrl(documentUrl,
                                          KDevelop::TopDUContext::AllDeclarationsContextsAndUses, this);
+}
+
+void ProblemReporterPlugin::documentUrlChanged(IDocument* document)
+{
+    if (!document->textDocument())
+        return;
+    const auto it = std::find_if(m_visualizers.cbegin(), m_visualizers.cend(),
+                                 [textDocument = document->textDocument()](const ProblemVisualizer* v) {
+                                     return v->document() == textDocument;
+                                 });
+    if (it == m_visualizers.cend()) {
+        qCWarning(PLUGIN_PROBLEMREPORTER) << "a visualizer for renamed document is missing:" << document->textDocument()
+                                          << document->url().toString();
+        return;
+    }
+
+    const auto previousUrl = it.key();
+    qCDebug(PLUGIN_PROBLEMREPORTER) << "document URL changed from" << previousUrl.toUrl().toString() << "to"
+                                    << document->url().toString();
+    m_reHighlightNeeded.remove(previousUrl);
+
+    auto* const visualizer = it.value();
+    m_visualizers.erase(it);
+
+    const IndexedString currentUrl{document->url()};
+    Q_ASSERT(!m_visualizers.contains(currentUrl));
+    m_visualizers.insert(currentUrl, visualizer);
 }
 
 void ProblemReporterPlugin::documentActivated(KDevelop::IDocument* document)
